--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
 .App {
+    display: flex;
+    flex-direction: column;
   text-align: center;
+  margin-top: 50px;
 }
+/* .App h1 {margin-top: 20vh; */
+/* } */
 
+.press-button {
+    margin: '20px';
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
