--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,6 @@ button {
 /*    color: rgba(130, 250, 115, 1);*/
 /*    transition-duration: .5s;*/
 /*}*/
-div {
-  color: rgb(250, 250, 250);
-}
 
 .main-content {
   padding-top: 60px;
@@ -26,6 +23,20 @@ a {
   color: inherit;
 }
 
+div {
+display: flex;
+flex-direction: column;
+text-align: center;
+align-items: center;
+justify-content: center;
+}
+#root {
+    display: flex;
+    flex:1;
+    color:white;
+    flex-direction: column;
+
+}
 
 
 .label-error {
@@ -39,9 +50,6 @@ a {
   align-items: center;
   width: 100%;
   z-index: 1000;
-}
-.header-container > div {
-  /* You can override specific styles for the div within the header if needed */
 }
 
 .header-container .filler {
@@ -117,10 +125,7 @@ align-items: flex-start;
 color: black;
 }
 
-.mainContainer h1 {
-margin-top: 10px;
-color: black;
-}
+
 
 
 .articleContent{
@@ -207,8 +212,6 @@ text-decoration: underline;
 }
 .loginContainer a {color: white;
 
-}
-.inputContainer {
 }
 .inputBox {
   height: 48px;
